--- a/src/component/comment/style.module.css
+++ b/src/component/comment/style.module.css
@@ -1,10 +1,10 @@
 .holder { 
     background-color: #c7d2fe;
     color: #3730a3;
-    padding: 15px;
+    padding: 5px;
     margin: 5px;
     font-size: 20px;
-    width: 100%;
+    /* width: 100%; */
     border-radius: 12px;
     border: solid 1px #3730a3;
     cursor: pointer;
