convert to SPA-finall edit

--- a/src/component/commentList/comment/style.module.css
+++ b/src/component/commentList/comment/style.module.css
@@ -1,5 +1,5 @@
 .holder { 
-    background-color: #c7d2fe;
+    background-color: #f5f7ff;
     color: #3730a3;
     padding: 5px;
     margin: 5px;
