--- a/src/pages/addNewComment/style.module.css
+++ b/src/pages/addNewComment/style.module.css
@@ -1,6 +1,6 @@
 
 .holder { 
-    background-color: #c7d2fe;
+    background-color: #f5f7ff;
     border-radius: 8px;
     border: solid 1px #3730a3;
 }
