--- a/src/pages/addNewComment/style.module.css
+++ b/src/pages/addNewComment/style.module.css
@@ -3,6 +3,7 @@
     background-color: #f5f7ff;
     border-radius: 8px;
     border: solid 1px #3730a3;
+    width: 89%;
 }
 
 .holder p { 
@@ -15,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
+    width: 98%;
     /* height: 150px; */
 }
 
